# distribution-discrepancies

./: .gitignore  CITATION.cff  LICENSE  README.md  discrepancies.py  distributions.py  kernels.py  pyproject.toml
naive_implementations/: naive_discrepancies.py  naive_distributions.py  naive_kernels.py
notebooks/: 1_kernels.ipynb  2_maximum_mean_discrepancy.ipynb  3_kernel_stein_discrepancy.ipynb  4_fisher_divergence.ipynb  4_witness_functions.ipynb  5_fisher_divergence.ipynb
tests/: test_discrepancies.py  test_distributions.py  test_kernel_derivatives.py  test_kernels.py
