[tool.poetry]
name = "distribution_discrepancies"
version = "0.0.0"
description = "Exploration of different probability distribution discrepancies"
authors = [
    "jswu18 <jswu18@gmail.com>"
]

[tool.poetry.dependencies]
python = "~3.9"

# Core dependencies
numpy="~1.23.1"
scipy="~1.8.1"
jax="~0.3.15"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "~22.6"
isort = "~5.10"
pytest = "~7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
